// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text should render bold 1`] = `
.c0 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
}

<p
  className="c0"
>
  This is text with 
  <b>
    some bold formatting
  </b>
  .
</p>
`;

exports[`Text should render inline-code 1`] = `
.c0 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
}

<p
  className="c0"
>
  This is text with 
  <code>
    some inline code
  </code>
  .
</p>
`;

exports[`Text should render italics 1`] = `
.c0 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
}

<p
  className="c0"
>
  This is text with 
  <i>
    some italic formatting
  </i>
  .
</p>
`;

exports[`Text should render strike-through 1`] = `
.c0 {
  color: #404040;
  font-family: ReithSansNewsRegular,Helvetica,Arial,sans-serif;
  padding-bottom: 1rem;
  margin: 0;
}

<p
  className="c0"
>
  This is text with 
  <del>
    some strike-through formatting
  </del>
  .
</p>
`;
